fix: Handle new url patterns and wrap all frames in RemoteFrame
Ensuring a consistent experience in Desktop for remote frames

--- a/src/renderer/components/shell/MainLayout.less
+++ b/src/renderer/components/shell/MainLayout.less
@@ -9,10 +9,10 @@
     overflow: hidden;
 
     & > section {
-        height: 100%;
-        width: 100%;
+        flex: 1;
         display: flex;
         flex-direction: column;
+        overflow: auto;
         & > main {
             background-color: white;
             flex: 1;
